# nova-test

./: README.md  package-lock.json  package.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  rust.yml  test-env.yml
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  custom_nsis.nsi  set-nsis-vars.ps1  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  msgraph_api.rs
src/components/announcement/: announcement.jsx
src/components/card/: CategoryCard.jsx  PerformanceCard.jsx  StatCard.jsx
src/components/filter/: filter.jsx
src/components/sidebar/: sideBar.css  sideBar.jsx
src/components/topbar/: Topbar.css  Topbar.jsx
src/config/: azureAuth.jsx  colorConfig.jsx  themeContext.jsx
src/data/: graphData.jsx  profileData.jsx  sharepointData.jsx
src/pages/commitment/: Commitment.css  Commitment.jsx  CommitmentFilter.jsx  CommitmentForm.jsx  CommitmentFormStep.jsx  CommitmentHighlight.jsx  CommitmentQuarterBarChart.jsx  CommitmentTotalStatCard.jsx  MyCommitmentCard.jsx  TotalCommitmentBarChart.jsx  TotalCommitmentCard.jsx
src/pages/home/: announcement.jsx  home.css  home.jsx  news.css  news.jsx  (+2 more)
src/shared/: CategoryCard.jsx  PerformanceCard.jsx  StatCard.jsx
src/stores/: AnnouncementStore.jsx  AppStore.jsx  AzureStore.jsx  CommitmentStore.jsx  InnovationStore.jsx  LoginStore.jsx  MemberStore.jsx  NewsStore.jsx  PerformanceStore.jsx  SubmissionStore.jsx  TargetStore.jsx
src/utils/: GeneralUtils.jsx  Helpers.jsx  SubmissionUtils.jsx  Themes.jsx
(+37 files in other folders)
