[package]
name = "nova"
version = "0.3.0"
description = "Intel Flex Innovation App"
authors = ["zheng.chyuan.ooi@intel.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nova_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
base64 = "0.13"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2.2.5"
tauri-plugin-fs = "2"
umya-spreadsheet = "2.2.3"

